Working bootstraping for requirements with CoClass tillgangsystem